<resources>
    <string name="app_name">ParkingApp</string>
    <string name="username">User Name: </string>
    <string name="password">Password:</string>
    <string name="login_button">Sign In</string>
    <string name="Park">Need Parking!</string>
    <string name="Leaving">Need a Lift!</string>
    <string name="name">Name:</string>
    <string name="email">Email Address:</string>
    <string name="confirm">Confirm Password:</string>
    <string name="signup">Sign Up</string>
</resources>
