<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.carlos.parkingapp.MainActivity"
    android:orientation="vertical"
    android:background="@color/gray"
    android:weightSum="1">


    <ImageView
        android:id="@+id/CPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
          />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText4"
        android:background="@color/white"
        android:layout_marginBottom="15dp"

        />


    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText6"
        android:background="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/green"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:onClick="OnButtonClick"
        android:textStyle="bold"
        android:id="@+id/login_button"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/white"
        android:textColor="@color/green"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:id="@+id/signup_button1"
        android:onClick="OnSignupClick"
        />

</LinearLayout>
